# lgws

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
lgws/: __init__.py  __main__.py  bridge.py  cli.py  lgws.py  utils.py
webos_app/: README.md  __init__.py  config.py  package-lock.json  package.json
webos_app/public/: index.html
webos_app/src/: main.js
webos_app/src/components/: HelloWorld.vue
